--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,40 @@
 version: '2.0'
-services:  
+services:
     web:
-        build: .
+        build:
+         context: nginx/
         ports:
          - "80:80"
-        volumes: 
-         - ./app:/var/www/informe
+        volumes_from:
+         - php
         links:
          - php
+         - db
     php:
-        image: php:7-fpm
+        build:
+         context: php/
+        ports:
+         - "9000:9000"
         volumes:
          - ./app:/var/www/informe
+         - /var/log/nginx:/var/log/nginx
+    cli:
+        build:
+         context: cli/
+        volumes_from:
+         - php
+    db:
+        build:
+         context: db/
+        volumes_from:
+         - php
+        env_file:
+         - db_vars.env
+        environment:
+          MYSQL_DATABASE: $${DB_NAME}
+          MYSQL_USER: $${DB_USER}
+          MYSQL_PASSWORD: $${DB_PASSWORD}
+          MYSQL_ROOT_PASSWORD: $${DB_PASSWORD}
+          MYSQL_MYSQL_ALLOW_EMPTY_PASSWORD: "yes"
+        ports: 
+         - "3306:3306"
