--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -11,8 +11,7 @@ FROM dockerfile/ubuntu
 RUN \
   add-apt-repository -y ppa:nginx/stable && \
   apt-get update && \
-  apt-get install -y --force-yes nano && \
-  apt-get install -y --force-yes nginx && \
+  apt-get install -y nginx && \
   rm -rf /var/lib/apt/list/* && \
   echo "\ndaemon off;" >> /etc/nginx/nginx.conf && \
   chown -R www-data:www-data /var/lib/nginx;
